--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FlexBox 1</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="maincontainer">
+      <div class="navside"><p>Nav</p></div>
+      <div class="right">
+        <div class="header">
+          <p>Header</p>
+        </div>
+        <div class="twodiv">
+          <div class="article">
+            <p>article</p>
+          </div>
+          <div class="aside">
+            <p>aside</p>
+          </div>
+        </div>
+        <div class="footer">
+          <p>Footer</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
